Layout issue fix on contribute for long Name
Issue was with Name, if the name is too long it was taking more height.
It is not wrapped only in one line with ellipsis.

--- a/web-app/css/fedu.css
+++ b/web-app/css/fedu.css
@@ -250,6 +250,14 @@ ul.unstyled {
 	min-height: 28px;
 }
 
+.caption p {
+	white-space: nowrap;
+	width: inherit;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	min-height: 20px;
+}
+
 .blacknwhite {
     position: relative;
     display: block;
